# Wheeled_robot

./: .gitignore  CMakeLists.txt  DC_motor_class.cpp  DC_motor_class.h  README.md  Two_wheel_drive_class.cpp  Two_wheel_drive_class.h  encoder.cpp  main  main.cpp  main_test.cpp  pin_settings.h  profilerClass.h  recompile.sh  zapas.code-workspace
dcMotor/: DC_motor_class.cpp  DC_motor_class.h  DCmotor.cpp  DCmotor.h
encoder/: encoder.cpp  encoder.h
lineDetector/: detector.cpp  detector.h
positionAnalyser/: positionAnalyser.cpp  positionAnalyser.h
profiler/: profilerClass.cpp  profilerClass.h  rotationProfiler.cpp  rotationProfiler.h  rotationProfilerClass.cpp  rotationProfilerClass.h  translationProfiler.cpp  translationProfiler.h  translationProfilerClass.cpp  translationProfilerClass.h
regulatorPD/: regulatorPD.cpp  regulatorPD.h  regulatorPDC.h  regulatorPDClass.h
routeControll/: routeControll.h
timer/: timer.h
translatorController/: driveController.cpp  driveController.h
wheelDrive/: TwoWheelDrive.cpp  TwoWheelDrive.h  Two_wheel_drive.cpp  Two_wheel_drive.h  Two_wheel_drive_class.cpp  Two_wheel_drive_class.h  twoWheelDrive.cpp  twoWheelDrive.h
